# dagrun

./: .gitignore  README.md  ROP.md  dag_test.md  demo.plan  pyproject.toml  schema.plan.md  test_plan.md
rulesets/: README.md  generic_checklists.v1.yaml  ruleset_template.yaml
src/dagrun/: __init__.py  __main__.py  engine.py  md2plan.py  models.py  parser.py  rules.py  workspace.py
tests/: test_engine.py  test_md2plan.py  test_workspace.py
