[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dagrun"
version = "0.1.0"
description = "Local-first DAG orchestrator for AI-augmented development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
dagrun = "dagrun.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

